# gpui-ui

./: .gitignore  API_REFERENCE.md  CLAUDE.md  COMPONENTS.md  Cargo.toml  IMPLEMENTING_TEXT_INPUT.md  PROJECT_STATUS.md  README.md  REFACTOR_SUMMARY.md  TEXT_INPUT_IMPLEMENTATION.md  ZEDCOMPARISON.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: add.rs  info.rs  init.rs  list.rs  mod.rs  update.rs
cli/src/config/: mod.rs
cli/src/registry/: mod.rs
cli/src/utils/: fs.rs  mod.rs
components/: Cargo.toml
components/src/: badge.rs  button.rs  card.rs  checkbox.rs  dialog.rs  input.rs  lib.rs  prelude.rs  text_input.rs  traits.rs
examples/: README.md
examples/todo-app/: Cargo.toml
examples/todo-app/src/: main.rs
