[package]
name = "gpui-ui-workspace"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cli", "components"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"  # Adjust based on GPUI requirements
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/gpui-ui"

[workspace.dependencies]
# Shared dependencies with locked versions
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
gpui = "0.2.1"
