[workspace]
members = ["cli", "components", "examples/todo-app"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["GPUI-UI Contributors"]
license = "MIT"
repository = "https://github.com/AhegaoBurger/gpui-ui"

[workspace.dependencies]
# Shared dependencies with locked versions
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "2.1"
indicatif = "0.17"
dirs = "5.0"
chrono = "0.4"

gpui = "0.2.1"
