[package]
name = "gpui-ui-components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Component library for GPUI applications"

[dependencies]
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
